re PR target/13302 (Putting a va_list in a struct causes seg fault)

2003-12-05  Stuart Menefy <stuart.menefy@st.com>
	    J"orn Rennecke <joern.rennecke@superh.com>

	PR target/13302
gcc:
	* sh.c (sh_build_builtin_va_list): Use (*lang_hooks.types.make_type).
testsuite:
	* g++.dg/other/struct-va_list.C: New test.

Co-Authored-By: J"orn Rennecke <joern.rennecke@superh.com>

From-SVN: r74334